--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,8 @@
     <%= display_meta_tags :site => 'Evolve Travel' %>
 </head>
 <body>
-  <div class="navbar-wrapper">
       <div class="container">
-        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+        <div class="navbar navbar-default navbar-static-top navbar-fixed-top" role="navigation">
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -48,7 +47,6 @@
           </div>
         </div>
       </div>
-    </div>
 	<%= yield %> 
 	<footer>
 	    <p class="pull-right"><a href="#">Back to top</a></p>
