--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
           <%= image_tag("landing_image.png", :alt => "Clean Power Perks", :title => "Landing Page Image")  %>
           <div class="container">
             <div class="carousel-caption">
-              <h1>Make Money by Buying Clean Energy</h1>
+              <h1>Save Money by Buying Clean Energy</h1>
               <p>We reward people and businesses for consciously choosing clean energy</p>
               <p><a class="btn btn-lg btn-primary btn-benefits" href="#" role="button">View Benefits</a>
               <a class="btn btn-lg btn-sign-up" href="#" role="button">Sign up today</a></p>
@@ -55,16 +55,19 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
+          <i class="icon-fa-sun"></i>
           <h2>1 - Buy Clean Energy</h2>
           <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
+          <i class="icon-fa-gift"></i>
           <h2>2 - Browse Deals</h2>
           <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">  
+        <div class="col-lg-4"> 
+          <i class="icon-fa-money"></i> 
           <h2>3 - Save $$$</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
