--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CleanPowerPerks</title>
+    <title>Clean Power Perks</title>
     <%= stylesheet_link_tag  "application" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author"           content="Jonathan Lau"/>
     <meta name="designer"         content="Jonathan Lau"/>
-    <meta name="copyright"          content="Copyright Evolve &copy;2013"/>
+    <meta name="copyright"          content="Copyright Clean Power Perks &copy;2013"/>
     <%= favicon_link_tag 'logo.png' %>
-    <%= display_meta_tags :site => 'Evolve Travel' %>
+    <%= display_meta_tags :site => 'Clean Power Perks' %>
 </head>
 <body>
       <div class="container">
@@ -50,8 +50,15 @@
       </div>
 	<%= yield %> 
 	<footer>
-	    <p class="pull-right"><a href="#">Back to top</a></p>
-	    <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+	<div class="navbar footer" id="footer">
+	    <footer class="container">
+	      <ul class ="footer-ul nav span12">
+	      <li>&copy; 2013 Company, Inc.</li>
+	      <li><a href="#">Privacy</a></li>
+	      <li><a href="#">Terms</a></li>
+	      </ul>
+	    </footer>
+	</div>
 	</footer>
 </body>
 </html>
