--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,9 +9,10 @@
       </ol> -->
       <div class="carousel-inner">
         <div class="item active">
-          <%= image_tag("landing_image.png", :alt => "Clean Power Perks", :title => "Landing Page Image")  %>
+          <%= image_tag("landing_image.png", :alt => "Pathway to Sustainability", :title => "Pathway to Sustainability")  %>
           <div class="container">
             <div class="carousel-caption">
+              <%= image_tag("landing_logo.png", :alt => "Clean Power Perks", :title => "Clean Power Perks", :class=>'img-responsive landing-logo')  %>  
               <h1>Save Money by Buying Clean Energy</h1>
               <p>We reward people and businesses for consciously choosing clean energy</p>
               <p><a class="btn btn-lg btn-primary btn-benefits" href="#" role="button">View Benefits</a>
@@ -58,19 +59,19 @@
           <i class="icon-fa-sun"></i>
           <h2>1 - Buy Clean Energy</h2>
           <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">Sign up now &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <i class="icon-fa-gift"></i>
-          <h2>2 - Browse Deals</h2>
+          <h2>2 - Access Deals</h2>
           <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">Browse Deals &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4"> 
           <i class="icon-fa-money"></i> 
           <h2>3 - Save $$$</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">Learn More &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
@@ -81,11 +82,12 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">If you're going to shop, <span class="text-muted"> #shopclean.</span></h2>
+          <p class="lead">A Clean Power Perks initiative.  We promote clean businesses and provide awesome perks.</p>
+         <p><a class="btn btn-sign-up" href="#" role="button">Learn More &raquo;</a></p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="/assets/shop_clean.jpg" alt="Shop Clean">
         </div>
       </div>
 
@@ -93,11 +95,12 @@
 
       <div class="row featurette">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="/assets/windfarm.png" alt="Generic placeholder image">
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">The easiest, cheapest way to buy clean energy. <span class="text-muted">Doing good made convenient. </span></h2>
+          <p class="lead">We provide consumers with easy access to a wide range of energy providers.</p>
+          <p><a class="btn btn-sign-up" href="#" role="button">Buy Now &raquo;</a></p>
         </div>
       </div>
 
@@ -105,11 +108,12 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Support Our Planet. <span class="text-muted"> Even businesses can help.</span></h2>
+          <p class="lead">Our exclusive program allows you to reach environmentally-conscious consumers and promote your brand.</p>
+          <p><a class="btn btn-sign-up" href="#" role="button">Join us &raquo;</a></p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="/assets/customer.png" alt="Generic placeholder image">
         </div>
       </div>
 
