--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,10 +29,8 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#about">How it works</a></li>
-                <li><a href="#about">Brands</a></li>
-                <li><a href="#contact">Energy Providers</a></li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Deals <b class="caret"></b></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Perks <b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
@@ -43,6 +41,8 @@
                     <li><a href="#">One more separated link</a></li>
                   </ul>
                 </li>
+                <li><a href="#about">Brands</a></li>
+                <li><a href="#contact">Energy Providers</a></li>
               </ul>
             </div>
           </div>
@@ -53,7 +53,7 @@
 	<div class="navbar footer" id="footer">
 	    <footer class="container">
 	      <ul class ="footer-ul nav span12">
-	      <li>&copy; 2013 Company, Inc.</li>
+	      <li>&copy; 2014 CleanPowerPerks, LLC.</li>
 	      <li><a href="#">Privacy</a></li>
 	      <li><a href="#">Terms</a></li>
 	      </ul>
