JL simplified wording in featurettes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -83,7 +83,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">If you're going to shop, <span class="text-muted"> #shopclean.</span></h2>
-          <p class="lead">A Clean Power Perks initiative.  We promote clean businesses and provide awesome perks.</p>
+          <p class="lead">A Clean Power Perks initiative - We promote clean businesses and provide awesome perks.</p>
          <p><a class="btn btn-sign-up" href="#" role="button">Learn More &raquo;</a></p>
         </div>
         <div class="col-md-5">
@@ -98,8 +98,8 @@
           <img class="featurette-image img-responsive" src="/assets/windfarm.png" alt="Generic placeholder image">
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">The easiest, cheapest way to buy clean energy. <span class="text-muted">Doing good made convenient. </span></h2>
-          <p class="lead">We provide consumers with easy access to a wide range of energy providers.</p>
+          <h2 class="featurette-heading">Buy clean energy easily. <span class="text-muted">Doing good made convenient. </span></h2>
+          <p class="lead">Easy access to a wide range of energy providers.</p>
           <p><a class="btn btn-sign-up" href="#" role="button">Buy Now &raquo;</a></p>
         </div>
       </div>
@@ -109,7 +109,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Support Our Planet. <span class="text-muted"> Even businesses can help.</span></h2>
-          <p class="lead">Our exclusive program allows you to reach environmentally-conscious consumers and promote your brand.</p>
+          <p class="lead">We help you reach consumers and promote your brand.</p>
           <p><a class="btn btn-sign-up" href="#" role="button">Join us &raquo;</a></p>
         </div>
         <div class="col-md-5">
