Edited photo colors and text

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,7 +63,7 @@
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <i class="icon-fa-gift"></i>
-          <h2>2 - Access Deals</h2>
+          <h2>2 - Browse Perks</h2>
           <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
           <p><a class="btn btn-default" href="#" role="button">Browse Deals &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
@@ -83,7 +83,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">If you're going to shop, <span class="text-muted"> #shopclean.</span></h2>
-          <p class="lead">A Clean Power Perks initiative - Sustainable businesses and awesome deals.</p>
+          <p class="lead">A Clean Power Perks initiative - sustainable businesses and awesome deals.</p>
          <p><a class="btn btn-sign-up" href="#" role="button">Learn More &raquo;</a></p>
         </div>
         <div class="col-md-5">
