--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,10 +9,10 @@
       </ol> -->
       <div class="carousel-inner">
         <div class="item active">
-          <%= image_tag("forest.jpg", :alt => "Pathway to Sustainability", :title => "Pathway to Sustainability", :class=>'img-responsive')  %>
+          <%= image_tag("customer_reduced_exposure.png", :alt => "Pathway to Sustainability", :title => "Pathway to Sustainability", :class=>'img-responsive')  %>
           <div class="container">
             <div class="carousel-caption">
-              <%= image_tag("landing_logo.png", :alt => "Clean Power Perks", :title => "Clean Power Perks", :class=>'img-responsive landing-logo')  %>  
+              <%= image_tag('cpp_logo_landing_yellow.png', :alt => "Clean Power Perks", :title => "Clean Power Perks", :class=>'img-responsive landing-logo')  %>  
               <h1>Save Money by Buying Clean Energy</h1>
               <p>We reward people and businesses for consciously choosing clean energy</p>
               <p><a class="btn btn-lg btn-primary btn-benefits" href="#" role="button">View Benefits</a>
