--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <meta name="author"           content="Jonathan Lau"/>
     <meta name="designer"         content="Jonathan Lau"/>
     <meta name="copyright"          content="Copyright Clean Power Perks &copy;2013"/>
-    <%= favicon_link_tag 'logo.png' %>
+    <%= favicon_link_tag 'favicon.png' %>
     <%= display_meta_tags :site => 'Clean Power Perks' %>
 </head>
 <body>
@@ -23,11 +23,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <%= link_to(image_tag("logo.png", :alt => "Evolve Travel", :title => "Evolve Travel", :width => 110, ), "/", :class=>'navbar-logo') %>
+              <%= link_to(image_tag("cpp_logo_navbar_yellow.png", :alt => "Clean Power Perks", :title => "Clean Power Perks", :width => 50), "/", :class=>'navbar-logo') %>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
                 <li><a href="#about">How it works</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Perks <b class="caret"></b></a>
