--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
       </ol> -->
       <div class="carousel-inner">
         <div class="item active">
-          <%= image_tag("customer_reduced_exposure.png", :alt => "Pathway to Sustainability", :title => "Pathway to Sustainability", :class=>'img-responsive')  %>
+          <img alt: "Pathway to Sustainability" title: "Pathway to Sustainability" class='img-landing'></img>
           <div class="container">
             <div class="carousel-caption">
               <%= image_tag('cpp_logo_landing_yellow.png', :alt => "Clean Power Perks", :title => "Clean Power Perks", :class=>'img-responsive landing-logo')  %>  
@@ -58,19 +58,19 @@
         <div class="col-lg-4">
           <i class="icon-fa-sun"></i>
           <h2>1 - Buy Clean Energy</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+          <p>Easy access to a wide range of energy providers.</p>
           <p><a class="btn btn-default" href="#" role="button">Sign up now &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <i class="icon-fa-gift"></i>
           <h2>2 - Browse Perks</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+          <p>Cool brands, green businesses, and awesome deals.</p>
           <p><a class="btn btn-default" href="#" role="button">Browse Deals &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4"> 
           <i class="icon-fa-money"></i> 
           <h2>3 - Save $$$</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p>Helping the planet and saving money at the same time.</p>
           <p><a class="btn btn-default" href="#" role="button">Learn More &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
