--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="#about">How it works</a></li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Perks <b class="caret"></b></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Get Perks <b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
@@ -40,8 +40,13 @@
                     <li><a href="#">One more separated link</a></li>
                   </ul>
                 </li>
-                <li><a href="#about">Brands</a></li>
-                <li><a href="#contact">Energy Providers</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Businesses <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">For Energy Providers</a></li>
+                    <li><a href="#">For Consumer Brands</a></li>
+                  </ul>
+                </li>
               </ul>
             </div>
           </div>
