--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
                 </li>
                 <li><a href="#about">Contact</a></li>
               </ul>
-               <ul class="nav navbar-nav pull-right">
+               <ul class="nav navbar-nav navbar-right">
                   <li><a href="#">Sign Up</a></li>
                   <li><a href="#">Log In</a></li>
                 </ul>
