fixed fonts and styling

--- a/app/assets/stylesheets/cleanpowerperks.css.scss
+++ b/app/assets/stylesheets/cleanpowerperks.css.scss
@@ -21,6 +21,7 @@ $grey-theme: #8C8A8A;
 	.nav > li > a {
 		font-family: 'Pompiere', serif;
 		font-size: 22px;
+		color: #303030;
 	}
 	.dropdown-menu > li > a {
 		font-family: 'Pompiere', serif;
