--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
               <h1>Save Money by Buying Clean Energy</h1>
               <p>We reward people and businesses for consciously choosing clean energy</p>
        <!--        <p><a class="btn btn-lg btn-primary btn-benefits" href="#" role="button">Learn More</a> -->
-              <a class="btn btn-lg" id='btn-sign-up' href="#" role="button">Get Perks Today &raquo;</a>
+              <a class="btn btn-lg" id='btn-sign-up' href="#" role="button">Get Deals Today &raquo;</a>
               <h4><em>Existing clean energy customers get free access!</em></h4>
             </div>
           </div>
@@ -64,7 +64,7 @@
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <i class="icon-fa-gift"></i>
-          <h2>2 - Browse Perks</h2>
+          <h2>2 - Browse Deals</h2>
           <p>Cool brands, green businesses, and awesome deals.</p>
           <p><a class="btn btn-links-2" href="#" role="button">Browse Deals &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
