--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="#about">How it works</a></li>
-                <li><a href="#about">Get Perks</a></li>
+                <li><a href="#about">Get Deals</a></li>
                 <!-- <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Get Perks <b class="caret"></b></a>
                   <ul class="dropdown-menu">
