--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
  <!-- Carousel
     ================================================== -->
-    <div class="carousel slide" data-ride="carousel">
+     <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
       <!-- Indicators -->
-  <!--     <ol class="carousel-indicators">
+<!--       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
@@ -16,35 +16,42 @@
               <h1>Save Money by Buying Clean Energy</h1>
               <p>We reward people and businesses for consciously choosing clean energy</p>
        <!--        <p><a class="btn btn-lg btn-primary btn-benefits" href="#" role="button">Learn More</a> -->
-              <a class="btn btn-lg" id='btn-sign-up' href="#" role="button">Get Deals Today &raquo;</a>
+              <a class="btn btn-lg" id='btn-sign-up' href="#" role="button">Get perks Today &raquo;</a>
+              <h4><em>Existing clean energy customers get free access!</em></h4>
+            </div>
+          </div>
+        
+        <div class="item">
+          <img alt: "Pathway to Sustainability" title: "Pathway to Sustainability" class='img-landing'></img>
+          <div class="container">
+            <div class="carousel-caption">
+              <%= image_tag('cpp_logo_landing_yellow.png', :alt => "Clean Power Perks", :title => "Clean Power Perks", :class=>'img-responsive landing-logo')  %>  
+              <h1>Save Money by Buying Clean Energy</h1>
+              <p>We reward people and businesses for consciously choosing clean energy</p>
+       <!--        <p><a class="btn btn-lg btn-primary btn-benefits" href="#" role="button">Learn More</a> -->
+              <a class="btn btn-lg" id='btn-sign-up' href="#" role="button">Get perks Today &raquo;</a>
               <h4><em>Existing clean energy customers get free access!</em></h4>
             </div>
           </div>
         </div>
-        <!-- <div class="item">
-          <img data-src="holder.js/900x500/auto/#666:#6a6a6a/text:Second slide" alt="Second slide">
+        <div class="item">
+          <img alt: "Pathway to Sustainability" title: "Pathway to Sustainability" class='img-landing'></img>
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <%= image_tag('cpp_logo_landing_yellow.png', :alt => "Clean Power Perks", :title => "Clean Power Perks", :class=>'img-responsive landing-logo')  %>  
+              <h1>Save Money by Buying Clean Energy</h1>
+              <p>We reward people and businesses for consciously choosing clean energy</p>
+       <!--        <p><a class="btn btn-lg btn-primary btn-benefits" href="#" role="button">Learn More</a> -->
+              <a class="btn btn-lg" id='btn-sign-up' href="#" role="button">Get perks Today &raquo;</a>
+              <h4><em>Existing clean energy customers get free access!</em></h4>
             </div>
           </div>
         </div>
-        <div class="item">
-          <img data-src="holder.js/900x500/auto/#555:#5a5a5a/text:Third slide" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-            </div>
-          </div>
-        </div> -->
       </div>
-<!--       <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a> -->
-    </div><!-- /.carousel -->
+      <a class="left carousel-control"></a>
+      <a class="right carousel-control"></a>
+    </div>
+  </div><!-- /.carousel -->
 
 
 
@@ -54,8 +61,27 @@
 
     <div class="container marketing">
 
-      <!-- Three columns of text below the carousel -->
-      <div class="row">
+ 
+
+      <!-- START THE FEATURETTES -->
+
+      <div class="row featurette">
+        <div class="col-md-5">
+          <h2 class="featurette-heading" id="featurette-sub-heading">Perk of the Month</h2>
+          <%= image_tag("prana.jpeg", :class=>'img-responsive featurette-image') %>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-md-7">
+          <h2 class="featurette-heading" id="featurette-sub-heading">If you're going to shop, <span class="text-muted"> #shopclean.</span></h2>
+          <p class="lead">A CleanPowerPerks initiative - green businesses and perks.</p>
+         <p><a class="btn btn-links" href="#" role="button">Learn More &raquo;</a></p>
+        </div>
+      </div><!-- /.row -->
+
+      <hr class="featurette-divider">
+     <!-- Three columns of text below the carousel -->
+      <div class="row featurette">
+        <h2 class="featurette-heading">How It Works</h2>
+
         <div class="col-lg-4">
           <i class="icon-fa-sun"></i>
           <h2>1 - Buy Clean Energy</h2>
@@ -64,9 +90,9 @@
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <i class="icon-fa-gift"></i>
-          <h2>2 - Browse Deals</h2>
-          <p>Cool brands, green businesses, and awesome deals.</p>
-          <p><a class="btn btn-links-2" href="#" role="button">Browse Deals &raquo;</a></p>
+          <h2>2 - Browse Perks</h2>
+          <p>Cool brands, green businesses, and awesome Perks.</p>
+          <p><a class="btn btn-links-2" href="#" role="button">Browse Perks &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4"> 
           <i class="icon-fa-money"></i> 
@@ -76,41 +102,25 @@
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
-
-      <!-- START THE FEATURETTES -->
-
       <hr class="featurette-divider">
 
-      <div class="row featurette">
-        <div class="col-md-5">
-          <h2 class="featurette-heading">Deal of the Week</h2>
-          <%= image_tag("prana.jpeg", :class=>'img-responsive featurette-image') %>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-md-7">
-          <h2 class="featurette-heading">If you're going to shop, <span class="text-muted"> #shopclean.</span></h2>
-          <p class="lead">A CleanPowerPerks initiative - green businesses and deals.</p>
-         <p><a class="btn btn-links" href="#" role="button">Learn More &raquo;</a></p>
-        </div>
-      </div><!-- /.row -->
-
-      <hr class="featurette-divider">
-
-     <div class="row deals-featurette featurette">
+     <div class="row featurette">
+        <h2 class="featurette-heading">Featured Perks</h2>
         <div class="col-md-3">
           <%= image_tag("cpp_logo_landing_yellow.png", :class=>'img-responsive featurette-image') %>
-           <p><a class="btn btn-links" href="#" role="button">Deal 1 &raquo;</a></p>
+           <p><a class="btn btn-links" href="#" role="button">Perk 1 &raquo;</a></p>
         </div>
         <div class="col-md-3">
           <%= image_tag("cpp_logo_landing_yellow.png", :class=>'img-responsive featurette-image') %>
-           <p><a class="btn btn-links" href="#" role="button">Deal 2 &raquo;</a></p>
+           <p><a class="btn btn-links" href="#" role="button">Perk 2 &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-md-3">
           <%= image_tag("cpp_logo_landing_yellow.png", :class=>'img-responsive featurette-image') %>
-           <p><a class="btn btn-links" href="#" role="button">Deal 3 &raquo;</a></p>
+           <p><a class="btn btn-links" href="#" role="button">Perk 3 &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-md-3">
           <%= image_tag("cpp_logo_landing_yellow.png", :class=>'img-responsive featurette-image') %>
-           <p><a class="btn btn-links" href="#" role="button">Deal 4 &raquo;</a></p>
+           <p><a class="btn btn-links" href="#" role="button">Perk 4 &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
