--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,8 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="#about">How it works</a></li>
-                <li><a href="#about">Get Deals</a></li>
+                <li><a href="#about">How It Works</a></li>
+                <li><a href="#about">Get Perks</a></li>
                 <!-- <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Get Perks <b class="caret"></b></a>
                   <ul class="dropdown-menu">
@@ -53,8 +53,8 @@
                 <li><a href="#about">Contact</a></li>
               </ul>
                <ul class="nav navbar-nav navbar-right">
-                  <li><a href="#">Sign Up</a></li>
-                  <li><a href="#">Log In</a></li>
+                  <li><a class="navbar-button"><btn class="btn btn-danger" id='' href="#" role="button">Sign Up</btn></a></li>
+                  <li><a class="navbar-button"><btn class="btn btn-default" id='' href="#" role="button">Log In</btn></a></li>
                 </ul>
             </div>
           </div>
@@ -88,7 +88,7 @@
           <div class="col-md-4">
             <ul>
             <li><h3>Interested in receiving updates on latest perks and deals?</h3></li>
-            <li><a class='btn btn-danger btn-medium'>Sign Up Now &raquo;</a></li>
+            <li><a class='btn btn-danger btn-medium' id="sign-up-footer">Sign Up Now &raquo;</a></li>
             <li>
               <h5>Copyright © 2014 CleanPowerPerks. All rights reserved.</h5>
             </li>
