--- a/app/assets/stylesheets/cleanpowerperks.css.scss
+++ b/app/assets/stylesheets/cleanpowerperks.css.scss
@@ -82,11 +82,30 @@ h1, h2, h3 {
 	.landing-logo {
 		width: 200px;
 	}
+	.navbar-button {
+	padding: (($navbar-height - 34) / 2 ) 10px (($navbar-height - 34) / 2 ) !important;
+	btn {
+		font-family: 'Gotham SSm A', 'Gotham SSm B', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+	}
+	&:hover {
+		background-color: inherit !important;
+	}
+}
+
 }
 
 @media (min-width: 768px) and (max-width: 1153px) {
 	.landing-logo {
 		width: 125px;
+	}
+	.navbar-button {
+		padding: (($navbar-height - 34) / 2 ) 10px (($navbar-height - 34) / 2 ) !important;
+		btn {
+			font-family: 'Gotham SSm A', 'Gotham SSm B', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+		}
+		&:hover {
+			background-color: inherit !important;
+		}
 	}
 }
 
@@ -94,11 +113,23 @@ h1, h2, h3 {
 	.landing-logo {
 		width: 125px;
 	}
+	.navbar-button {
+		btn {
+			font-family: 'Gotham SSm A', 'Gotham SSm B', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+			width: 100%;
+		}
+	}
 }
 
 @media (min-width: 100px) and (max-width: 428px) {
 	.landing-logo {
 		width: 100px;
+	}
+	.navbar-button {
+		btn {
+			font-family: 'Gotham SSm A', 'Gotham SSm B', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+			width: 100%;
+		}
 	}
 }
 
@@ -118,16 +149,6 @@ h1, h2, h3 {
 
 #sign-up-footer {
 	color: white !important;
-}
-
-.navbar-button {
-	padding: (($navbar-height - 34) / 2 ) 10px (($navbar-height - 34) / 2 ) !important;
-	btn {
-		font-family: 'Gotham SSm A', 'Gotham SSm B', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-	}
-	&:hover {
-		background-color: inherit !important;
-	}
 }
 
 .btn-links {
