--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,39 +17,11 @@
               <p>We reward people and businesses for consciously choosing clean energy</p>
        <!--        <p><a class="btn btn-lg btn-primary btn-benefits" href="#" role="button">Learn More</a> -->
               <a class="btn btn-lg" id='btn-sign-up' href="#" role="button">Get perks Today &raquo;</a>
-              <h4><em>Existing clean energy customers get free access!</em></h4>
+              <h4>Existing clean energy customers get free access!</h4>
             </div>
           </div>
-        
-        <div class="item">
-          <img alt: "Pathway to Sustainability" title: "Pathway to Sustainability" class='img-landing'></img>
-          <div class="container">
-            <div class="carousel-caption">
-              <%= image_tag('cpp_logo_landing_yellow.png', :alt => "Clean Power Perks", :title => "Clean Power Perks", :class=>'img-responsive landing-logo')  %>  
-              <h1>Save Money by Buying Clean Energy</h1>
-              <p>We reward people and businesses for consciously choosing clean energy</p>
-       <!--        <p><a class="btn btn-lg btn-primary btn-benefits" href="#" role="button">Learn More</a> -->
-              <a class="btn btn-lg" id='btn-sign-up' href="#" role="button">Get perks Today &raquo;</a>
-              <h4><em>Existing clean energy customers get free access!</em></h4>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img alt: "Pathway to Sustainability" title: "Pathway to Sustainability" class='img-landing'></img>
-          <div class="container">
-            <div class="carousel-caption">
-              <%= image_tag('cpp_logo_landing_yellow.png', :alt => "Clean Power Perks", :title => "Clean Power Perks", :class=>'img-responsive landing-logo')  %>  
-              <h1>Save Money by Buying Clean Energy</h1>
-              <p>We reward people and businesses for consciously choosing clean energy</p>
-       <!--        <p><a class="btn btn-lg btn-primary btn-benefits" href="#" role="button">Learn More</a> -->
-              <a class="btn btn-lg" id='btn-sign-up' href="#" role="button">Get perks Today &raquo;</a>
-              <h4><em>Existing clean energy customers get free access!</em></h4>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control"></a>
-      <a class="right carousel-control"></a>
+          <a class="left carousel-control"></a>
+          <a class="right carousel-control"></a>
     </div>
   </div><!-- /.carousel -->
 
