--- a/app/assets/stylesheets/carousel.css.scss
+++ b/app/assets/stylesheets/carousel.css.scss
@@ -166,6 +166,10 @@ div.featurette {
     border-radius: 4px;
   }
 
+  div.carousel-caption h1 {
+    font-weight: 700; 
+    font-size: 40px;
+  }
   /* Bump up size of carousel content */
   .carousel-caption p {
     margin-bottom: 20px;
@@ -173,7 +177,7 @@ div.featurette {
     line-height: 1.4;
   }
   .featurette-heading {
-    font-size: 50px;
+    font-size: 40px;
     margin-bottom: 40px;
   }
 
